--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,7 +91,7 @@ flutter:
           weight: 400
         - asset: fonts/Poppins-Medium.ttf
           weight: 500
-        - asset: fonts/Poppins-SemiBold.tff
+        - asset: fonts/Poppins-SemiBold.ttf
           weight: 600
         - asset: fonts/Poppins-Bold.ttf
           weight: 700
